# pyrcheevos

./: .gitignore  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
pyrcheevos/: __init__.py  _lib.py  cli.py  consoles.py  hash.py
