[project]
name = "pyrcheevos"
version = "0.1.0"
description = "Python bindings and CLI for the rcheevos RetroAchievements hashing library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pyrcheevos = "pyrcheevos.cli:main"
rcheevos = "pyrcheevos.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrcheevos*"]

# Package data: include the compiled shared library when it is present.
[tool.setuptools.package-data]
pyrcheevos = ["librcheevos.so", "librcheevos.dylib", "rcheevos.dll"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
